--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # SITE CONFIGURATION
 baseurl: ""
-url: "https://sylhare.github.io"
+url: "https://blog.brunomeseguer.github.io"
 
 # THEME-SPECIFIC CONFIGURATION
 theme_settings:
