--- a/_config.yml
+++ b/_config.yml
@@ -47,7 +47,7 @@ theme_settings:
 
   # Scripts
   google_analytics: # Tracking ID, e.g. "UA-000000-01"
-  disqus_shortname:
+  disqus_shortname: @brunomeseguer
   katex: true # Enable if using math markup
   # search: true
   
